objects/Combined_Pipeline_Line_Item_Data__c.object
<CustomObject>
    <fields>
        <fullName>Application_Backup__c</fullName>
        <description>Backup field to save existing value. STS R3.0</description>
        <inlineHelpText>Backup field to save existing value. STS R3.0</inlineHelpText>
        <label>Application Backup</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Combined_Pipeline_Data__c</fullName>
        <label>Combined Pipeline Data</label>
        <referenceTo>Combined_Pipeline_Data__c</referenceTo>
        <relationshipName>Combined_Pipeline_Line_Item_Datas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Item_Total_Sales_Price__c</fullName>
        <label>Item Total Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Line_Item_Name__c</fullName>
        <label>Line Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;Related_ID__c, Scope_Product_Name__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity/Quote Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Record_ID__c</fullName>
        <label>Parent Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Line Item</label>
        <referenceTo>Apttus_Proposal__Proposal_Line_Item__c</referenceTo>
        <relationshipLabel>Pipeline Line Item Data</relationshipLabel>
        <relationshipName>Pipeline_Line_Item_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_ID__c</fullName>
        <label>Related ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity_Quote__c</fullName>
        <formula>Combined_Pipeline_Data__r.Name__c</formula>
        <label>Related Opportunity/Quote</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope_Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scope - Product Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Pipeline Line Item Data</relationshipLabel>
        <relationshipName>Pipeline_Line_Item_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scope_line_item_application__c</fullName>
        <label>Scope - line item application</label>
        <picklist>
            <picklistValues>
                <fullName>AP.301</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.302</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.303</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.304</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.305</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.306</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.307</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.308</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.309</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.310</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.311</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.313</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.314</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.315</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.316</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.317</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.318</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.319</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.320</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.321</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.322</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.323</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.324</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.325</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.326</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.327</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.328</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.329</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.330</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.331</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scope_line_item_product_group__c</fullName>
        <formula>TEXT(Scope_Product_Name__r.Product_Group__c)</formula>
        <label>Scope - line item product group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope_line_item_quantity__c</fullName>
        <label>Scope - line item quantity</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scope_line_item_sales_price__c</fullName>
        <description>Created as part of R7A Combined Pipeline</description>
        <label>Scope - line item sales price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scope_line_item_source_location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scope - line item source location</label>
        <referenceTo>ABB_Location__c</referenceTo>
        <relationshipLabel>Pipeline Line Item Data</relationshipLabel>
        <relationshipName>Pipeline_Line_Item_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scope_line_offering_tree_ID__c</fullName>
        <formula>Scope_Product_Name__r.CID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scope - line offering tree ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Opportunity Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote Line Item</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>of_Pipeline_Line_Items_Data__c</fullName>
        <description>SFDC - 4167 - Field type ‘Power of One’ for reporting purpose only</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>It shows if at least 1 record on this object was created or not (1 means that it was)</inlineHelpText>
        <label># of Pipeline Line Items Data</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Pipeline Line Item Data</label>
    <nameField>
        <displayFormat>CPLI-{00000}</displayFormat>
        <label>Combined Pipeline Line Item Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pipeline Line Item Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>